# ccb

./: .env  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml  ml-switch.sh  start.sh
.sqlx/: query-03b28af82861bd9b26309a934d295e4cf7d43167d86614c70b0e7d8b2ac6399f.json  query-2fe59212e324e755c441070bd6dd2816a2b882fa4daec9a5cd0b89a7249fabfa.json  query-34a4b5070a1d8b468b2c149f158c24c7d29b931450615367cd85b73facccb39e.json  query-40b1ce42cec942fb2168b2e6d5c577675cb5703671bc8770ab597853a2648287.json  query-4168564b9a89782a70bf7ad06fe3fb0bc832a554c919c75bbbdc8a096a9ca853.json  (+11 more)
backend/: .env  Cargo.toml  Dockerfile
backend/.sqlx/: query-0a709e118c142a0cd56759ab348369057190b1b979938af43beceff86ace5083.json  query-0b39c69bc2bf3ec8338695cb0d6ec0caa5922355c791fb87a7b61a07d226138d.json  query-1d830c67cff28f7a7f0add81c355b314efb5908db2c652630517ef47cb72c823.json  query-2f74d86eadb026faaef0ac8e3d8d40e7afc12bd311f4de265c747ebb59c4069f.json  query-3d39c96cc75fb3ee4bf7d35049e58ea63d915b8f542812687f6af95e115f884b.json  query-8a1a6bb99def18c65f9af798f734e5c6e9e2fb513a215399ee42a20815abf02a.json  query-a25728ae5754e236e2fd1548774e3419499bad515c122b62c24f40e90df171f2.json  query-b3291c7c0e69df4cca3c361727898ebf486298ad5efb5fe0893bcb6bc6efd16c.json  query-b7923ef9302e95a201abb39fc00278efd17dfcde91c2156c7446a31170d787c1.json  query-bf9d9f726e0f927f9b6b614ab4f85d0d38a32445b5feefea43225df52fcec27e.json  query-df19c80ba1e7653172f894eb411f6345f8e225b56b2321a5b967842f1578a23a.json  query-ec130180ef5678f92b6ffbca125cf3ea5a984b32ef65a1f77516640918b6936e.json  query-f82b5e7ff65a77983bfaba1bef97a4be613d8ba6b044cbce093ccb7d99b392da.json  query-fa3fa45762a4f5bf471a4a59c862633d847e8ab34974fda47bf016d1b5478832.json
backend/src/: main.rs
(+56 files in other folders)
