[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5.3"
jsonwebtoken = "9"
tower-http = { version = "0.6.8", features = ["cors"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
csv = "1.4.0"
calamine = "0.32.0"
reqwest = { version = "0.11", features = ["json"] }
rust_xlsxwriter = "0.92"
genpdf = "0.2"
futures = "0.3"
